--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-gesture-handler": "^2.10.0",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.7.2",
-    "react-native-safe-area-context": "^4.5.2"
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native-dotenv": "^0.2.0",
     "typescript": "^4.9.4"
   },
   "private": true
