--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "expo-svg-uri": "^1.3.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
